* MB 7.0

Package reorganization to support COUGAAR opensource release 7.0.
Details may be found in 7.0/alp7.pkg.  Changes are reflected in
javadocs and other documentation.

* MB 6.8.2

New PG in alp domain LocationSchedulePG is maintained by
OrgRTDataPlugin (for "Home location") and by new OPlanWatcherLP (for
oplan-directed location assignments).  It is up to consumers to
interpret the schedule and assign semantics.  However, a useful method
is TimeSpanSet.getMinimalIntersectingElement(long time) which when
called on a schedule, will return the shortest element overlapping the
specified time.  This is experimental functionality at this point.

NOTE: TimeSpan MIN_VALUE and MAX_VALUE are no longer == Long.MIN_VALUE
and MAX_VALUE.  This should not effect correct code, but you
might notice slightly different dates in UIs for elements which
represent unbounded time.  It is very important that you not use
Long.MIN/MAX_VALUE for schedules - *always* use TimeSpan.MIN/MAX_VALUE.

* MB 6.8.1

bugfixes

* MB 6.8

The new classloading Node bootstrapper may cause problems with certain 
IDEs.  There are two workarounds:
	1. call Node.launch instead of Node.main.
	2. pass -Dalp.useBootstrapper=false to java command.
Both options require that the classpath be complete and correct, as
the bootstrapper will not do any jar-file searching.

Also, the Bootstrapper's classloader will not load any classes which
start with "java.", "javax.", "sun.", "com.sun." or "net.jini.".  This 
list may be extended by supplying a -Dalp.bootstrapper.exclusions=foo.:bar.
System property.  The value of the property should be a list of 
package prefixes separated by colon (":") characters.

New System property alp.message.fastTransport=true (default is false)
optimizes the rmi message transport for societies where nodes usually
contain multiple clusters.  This option instructs the RMI
MessageTransport to:
 1. send messages via one thread-per node rather than one per cluster
when possible. 