@@ -1,0 +1,5 @@
+# the jdbc connection string for the oracle instance to use.
+# these are examples only to show syntax and will NOT actually work.
+org.cougaar.database=database.cougaar.org:1521:cougaar
+org.cougaar.database.user=plugin
+org.cougaar.database.password=pluginPassword
